--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cloud_firestore: ^4.15.8
   firebase_auth: ^4.17.8
   firebase_storage: ^11.6.9
+  fluttertoast: ^8.2.5
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_test:
